--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,6 +7,8 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
+  display: block;
+  text-align: center; 
 
 }
 
@@ -14,25 +16,63 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos {
+    display:none;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioTres {
+    position:relative;
+    top:100px;
+    left: 200px;
+    
+}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
+#ejercicioCuatro{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 10;
+}
 
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
+#ejercicioCinco {
+    display:flex;
+    align-items:center;
+    justify-content: space-around;
+    flex-direction: row-reverse;
+}
 
 
 /* Ejercicio 6. */
+#ejercicioSiete{
+    display:flexbox;
+    align-items: center;
+
+}
+
+#elementoUno {
+    align-self: flex-start;
+}
+#elementoDos{
+    align-self: flex-end;
+}
+
+#elementoTres {
+    ;
+}
+
+#elementoCuatro {
+    align-self: flex-start;
+}
